sumo/tests/duarouter/trips/errors/vehicle_empty_departpos/errors.duarouter
Error: Attribute 'departPos' in definition of a trip is empty.
Error: Invalid departPos definition for vehicle ''
Quitting (on error).
